--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.1-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.1-release-notes.mdx
@@ -51,4 +51,5 @@
 ### Known issues
 
 - The ClusterInformations resource is showing the wrong versions for `calicoVersion` and `cnxVersion`. This will be addressed the next patch.
+- BPF dataplane on EKS with Kubernetes 1.24, and AKS with Kubenetes 1.25 is not supported at this time. This will be addressed in the next patch.
 - Upgrading to {{prodname}} 3.16.0 on Rancher/RKE from {{prodname}} 3.13.0 currently requires manually terminating the calico-node container for an upgrade to proceed.
