--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.1-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.1-release-notes.mdx
@@ -38,7 +38,7 @@
 
 #### Support for multiple external networks
 
-{{prodname}} includes networking options that allows pods from different namespaces to egress onto different external networks (Virtual Routing Functions or VRFs) that may have overlapping IPs with each other. This also enables administrators to configure which service IPs are advertised for a network by the service IP advertisement feature. For more information, see [Configure egress traffic to multiple external networks](networking/egress/external-network.mdx).
+{{prodname}} includes networking options that allows pods from different namespaces to egress onto different external networks (Virtual Routing Functions or VRFs) that may have overlapping IPs with each other. This also enables administrators to configure which service IPs are advertised for a network by the service IP advertisement feature. For more information, see [Configure egress traffic to multiple external networks](../../networking/egress/external-network.mdx).
 
 #### Improved {{prodname}} component security
 
