Apply suggestions from code review
Co-authored-by: Christopher Tauchen <tauchen@gmail.com>

--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -78,7 +78,7 @@ Before you get started, make sure you have downloaded and configured the [necess
 
 1. Now that the aws-node daemonset is gone, you can add nodes to the cluster.
 
-   ```batch
+   ```bash
    eksctl create nodegroup --cluster my-calico-cluster --node-type t3.medium --max-pods-per-node 100
    ```
 
