--- a/calico/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -70,15 +70,15 @@ Before you get started, make sure you have downloaded and configured the [necess
    eksctl create cluster --name my-calico-cluster --without-nodegroup
    ```
 
-1. Since this cluster will use {{prodname}} for networking, you must delete the `aws-node` daemonset to prevent it from writing conflicting CNI config to your nodes.
+1. Since this cluster will use {{prodname}} for networking, you must delete the `aws-node` daemonset to prevent it from writing a conflicting CNI config to your nodes.
 
    ```bash
    kubectl delete daemonset -n kube-system aws-node
    ```
 
-1. Now that the aws-node daemonset is gone, you can add nodes to the cluster.
+1. Now that the `aws-node` daemonset is gone, you can add nodes to the cluster.
 
-   ```batch
+   ```bash
    eksctl create nodegroup --cluster my-calico-cluster --node-type t3.medium --max-pods-per-node 100
    ```
 
@@ -145,7 +145,7 @@ Before you get started, make sure you have downloaded and configured the [necess
     kubectl create namespace tigera-operator
     ```
 
-1. Install version {{releaseTitle}} of the {{prodname}} operator and custom resource definitions.
+1. Install version {{releaseTitle}} of the tigera-operator and custom resource definitions.
 
     ```batch
     helm install calico projectcalico/tigera-operator --namespace tigera-operator --version {{releaseTitle}}
