--- a/calico-cloud_versioned_docs/version-3.16/get-help/support.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/get-help/support.mdx
@@ -6,13 +6,13 @@ description: Ways to get help and provide feedback.
 
 ## Contact Support
 
-Before opening a Support ticket, review this checklist of basic [troubleshooting](../get-started/connect/checklist.mdx).
+Before opening a support ticket, review this checklist of basic [troubleshooting](../get-started/connect/checklist.mdx).
 
-If you still need help, open a [support ticket](https://tigera.force.com/help/s/).
+If you still need help, visit our [support portal](https://tigeraio.my.site.com/community/s/login/).
 
 ## Provide feedback
 
-We value your feedback and suggestions for improvement. Email us: feedback@calicocloud.io
+We value your feedback and suggestions for improvement. Email us: help@calicocloud.io.
 
 ## Support policy
 
