--- a/calico-enterprise/network-policy/beginners/calico-network-policy.mdx
+++ b/calico-enterprise/network-policy/beginners/calico-network-policy.mdx
@@ -223,7 +223,7 @@ metadata:
   name: drop-other-ingress
 spec:
   order: 20
-  ...deny policy rules here...
+  #...deny policy rules here...
 ```
 
 ```yaml
@@ -233,7 +233,7 @@ metadata:
   name: allow-cluster-internal-ingress
 spec:
   order: 10
-  ...allow policy rules here...
+  #...allow policy rules here...
 ```
 
 ### Generate logs for specific traffic
