--- a/calico_versioned_docs/version-3.25/network-policy/get-started/calico-policy/calico-network-policy.mdx
+++ b/calico_versioned_docs/version-3.25/network-policy/get-started/calico-policy/calico-network-policy.mdx
@@ -228,7 +228,7 @@ metadata:
   name: drop-other-ingress
 spec:
   order: 20
-  ...deny policy rules here...
+  #...deny policy rules here...
 ```
 
 ```yaml
@@ -238,7 +238,7 @@ metadata:
   name: allow-cluster-internal-ingress
 spec:
   order: 10
-  ...allow policy rules here...
+  #...allow policy rules here...
 ```
 
 ### Generate logs for specific traffic
