--- a/calico-cloud/reference/resources/policyrecommendations.mdx
+++ b/calico-cloud/reference/resources/policyrecommendations.mdx
@@ -18,7 +18,7 @@ import Icmp from '@site/calico-enterprise_versioned_docs/version-3.16/_includes/
 
 import Rule from '@site/calico-enterprise_versioned_docs/version-3.16/_includes/content/_rule.mdx';
 
-The policy recommendation scope is a collection of configuration options to control the [policy recommendation](../../network-policy/recommendations/policy-recommendations.mdx) engine.
+The policy recommendation scope is a collection of configuration options to control [policy recommendation](../../network-policy/recommendations/policy-recommendations.mdx) in Manager UI.
 
 To apply changes to this resource, use the following format:
 
