Add support for Windows Server 2022

--- a/calico/getting-started/kubernetes/windows-calico/kubernetes/requirements.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/kubernetes/requirements.mdx
@@ -76,7 +76,7 @@ For operator-managed Linux {{prodname}} clusters, three Linux worker nodes are r
 - Windows versions:
 
   - Windows Server 1809 (build Build 17763.1432 or greater)
-  - Windows Server 20H2 (build 19042)
+  - Windows Server 2022
 
   :::note
 
