--- a/calico-cloud/network-policy/beginners/index.mdx
+++ b/calico-cloud/network-policy/beginners/index.mdx
@@ -1,5 +1,6 @@
 ---
 description: Learn how to create your first Calico Cloud network policy.
+hide_table_of_contents: true
 ---
 
 # Calico Cloud network policy for beginners
