--- a/calico-cloud/about/product-comparison.mdx
+++ b/calico-cloud/about/product-comparison.mdx
@@ -2,29 +2,36 @@
 description: Describes Tigera products and provides a feature comparison table.
 ---
 
-# Product comparison
+# Tigera product comparison
 
-## About Tigera products
+## {{prodname}} Open Source
+The base product that comprises both {{prodname}} Enterprise and {{prodname}} Cloud. It provides the core networking and network policy features.
 
-**Calico Open Source** is the base product that comprises both Calico Enterprise and {{prodname}}. It provides the core networking and network policy features.
+![calico-open-source](/img/calico/calico-open-source.svg)
 
-**{{prodname}} Enterprise** includes Calico Open Source core networking and network policy, but adds advanced features for networking, network policy, visibility and troubleshooting, threat defense, and compliance reports.  
+## {{prodname}} Enterprise
 
-**{{prodname}} Cloud** is the SaaS version of Calico Enterprise. It adds Image Assurance to scan and detect vulnerabilities in images, and container threat defense to detect malware. It also adds onboarding tutorials, and eliminates the cost to manage Elasticsearch logs and storage that comes with Calico Enterprise. 
+Includes the {{prodname}} Open Source core networking and network policy, but adds advanced features for networking, network policy, visibility and troubleshooting, threat defense, and compliance reports.
 
-![tigera-product-overview](/img/calico/calico-products.svg)
+![calico-enterprise](/img/calico/calico-enterprise.svg)
+
+## {{prodname}} Cloud
+
+The SaaS version of {{prodname}} Enterprise. It adds Image Assurance to scan and detect vulnerabilities in images, and container threat defense to detect malware. It also adds onboarding tutorials, and eliminates the cost to manage Elasticsearch logs and storage that comes with Calico Enterprise.
+
+![calico-cloud](/img/calico/calico-cloud.svg)
 
 What is the best fit for you? It depends on your needs. The following table provides a high-level comparison. 
 
 | Product                   | Cost and support                                             | Best fit                                                     |
 | ------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| Calico  Open Source | Free, community-supported                                    | **Users** who want best-in-class networking and network policy capabilities for Kubernetes without any costs. |
-| Calico Enterprise   | Paid subscription                                            | **Enterprise teams** who need full control to customize their networking security deployment to meet regulatory and compliance requirements for Kubernetes at scale. Teams who want Tigera Customer Support for day-zero to production best practices, custom training and workshops, and Solution Architects to customize solutions. |
-| {{prodname}}        | Free trial with hands-on training from Customer Support, then pay-as-you-go with self-service training. Also offered as an annual subscription. | **Small teams** who need to manage the full spectrum of compliance in a web-based console for novice users:<br />- Secure clusters, pods, and applications <br />- Scan images for vulnerabilities<br />- Web-based UI for visibility to troubleshoot Kubernetes<br />- Detect and mitigate threats <br />- Run compliance reports<br /><br />**Enterprise teams** who want to scale their {{prodname}} Enterprise on-premises deployments by providing more self-service to developers. |
+| {{prodname}}  Open Source | Free, community-supported                                    | **Users** who want best-in-class networking and network policy capabilities for Kubernetes without any costs. |
+| {{prodname}} Enterprise   | Paid subscription                                            | **Enterprise teams** who need full control to customize their networking security deployment to meet regulatory and compliance requirements for Kubernetes at scale. Teams who want Tigera Customer Support for day-zero to production best practices, custom training and workshops, and Solution Architects to customize solutions. |
+| {{prodname}}  Cloud       | Free trial with hands-on training from Customer Support, then pay-as-you-go with self-service training. Also offered as an annual subscription. | **Small teams** who need to manage the full spectrum of compliance in a web-based console for novice users:<br />- Secure clusters, pods, and applications <br />- Scan images for vulnerabilities<br />- Web-based UI for visibility to troubleshoot Kubernetes<br />- Detect and mitigate threats <br />- Run compliance reports<br /><br />**Enterprise teams** who want to scale their {{prodname}} Enterprise on-premises deployments by providing more self-service to developers. |
 
 ## Product comparison by feature 
 
-|                                                              | Calico Open Source | {{prodname}}             | Calico Enterprise  |
+|                                                              | {{prodname}} Open Source | {{prodname}} Cloud       | {{prodname}} Enterprise  |
 | ------------------------------------------------------------ | ------------------------ | ------------------------ | ------------------------ |
 | **Networking**                                               |                          |                          |                          |
 | High-performance, scalable pod networking                    | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
