--- a/calico-enterprise/networking/egress/egress-gateway-aws.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-aws.mdx
@@ -999,7 +999,7 @@ To add AWS Elastic IPs to the egress gateway pods, follow these steps:
   If your worker nodes are using ["standard" VPC public IPs](https://docs.aws.amazon.com/vpc/latest/userguide/vpc-ip-addressing.html#vpc-public-ipv4-addresses)
   then, when an Elastic IP is added to an egress gateway, adding the Elastic IP to the node will trigger the
   node to lose its VPC Public IP.  This is a [property of AWS networking](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/elastic-ip-addresses-eip.html#eip-basics);
-  a node is not allowed to have a VPC public IP and an Elastic IP.
+  a node is not allowed to have a VPC public IP and an Elastic IP (though we have found this is only enforced at boot).
   :::
 
 - Ensure that your VPC has an [Internet Gateway](https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Internet_Gateway.html)
