--- a/calico-cloud_versioned_docs/version-3.15/networking/egress/egress-gateway-aws.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/networking/egress/egress-gateway-aws.mdx
@@ -78,7 +78,7 @@ way have the normal AWS semantics: when accessing resources inside the AWS netwo
 (from the IP pool) is used. When accessing resources outside the AWS network, AWS translates the workload's IP to
 the Elastic IP. Elastic IPs also allow for incoming requests from outside the AWS fabric, direct to the workload.
 
-In overview, the AWS-backed feature works as follows:
+In overview, the AWS-backed IP Pools feature works as follows:
 
 - An IP pool is created with its `awsSubnetID` field set to the ID of a VPC subnet. This "AWS-backed" IP pool's
   CIDR must be contained within the VPC subnet's CIDR.
@@ -963,6 +963,15 @@ EOF
 ### Add AWS Elastic IPs to the egress gateway deployment
 
 To add AWS Elastic IPs to the egress gateway pods, follow these steps:
+
+- Ensure that either your worker nodes are in a private subnet, or they are using Elastic IPs for their public IP.
+
+  :::warning
+  If your worker nodes are using ["standard" VPC public IPs](https://docs.aws.amazon.com/vpc/latest/userguide/vpc-ip-addressing.html#vpc-public-ipv4-addresses)
+  then, when an Elastic IP is added to an egress gateway, adding the Elastic IP to the node will trigger the
+  node to lose its VPC Public IP.  This is a [property of AWS networking](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/elastic-ip-addresses-eip.html#eip-basics);
+  a node is not allowed to have a VPC public IP and an Elastic IP (though we have found this is only enforced at boot).
+  :::
 
 - Ensure that your VPC has an [Internet Gateway](https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Internet_Gateway.html)
   and a (default) route to the Internet Gateway from the AWS subnets used for egress gateways. (This is a
