Fix yaml errors in the bash code block and fix dead links

--- a/calico/about/kubernetes-training/about-network-policy.mdx
+++ b/calico/about/kubernetes-training/about-network-policy.mdx
@@ -227,7 +227,7 @@ spec:
 
 ### Hierarchical policy
 
-[Calico Enterprise](https://docs.tigera.io/calico-enterprise/latest/network-policy/policy-tiers/tiered-policyd-policy.mdx) supports hierarchical network policy using policy tiers. RBAC
+[Calico Enterprise](/calico-enterprise/latest/network-policy/policy-tiers/tiered-policy) supports hierarchical network policy using policy tiers. RBAC
 for each tier can be defined to restrict who can interact with each tier. This can be used to delegate trust across
 multiple teams.
 
