Clarified RN entry

--- a/calico-enterprise_versioned_docs/version-3.15/_includes/release-notes/_v3.15.2-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/_includes/release-notes/_v3.15.2-release-notes.mdx
@@ -2,7 +2,7 @@
 
 ### Bug Fixes
 
-- Added tolerations to CSI Driver so it can be scheduled on all nodes.
+- Fixed bug where EGW pods were in a crashloop.
 - Fixed performance issues with listing/resyncing routes when there are many interfaces/routes on the system. Use kernel-side filtering of routes for a dramatic speed improvement. (Auto-enabled on kernel v4.10+.)
 - Fixed a bug that caused policies to show in the service graph for even if they were deleted before the selected time range.
 - Fixed a bug that caused policy preview to crash due to a malformed query.
